force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ConstructionDistinction__c.field-meta.xml
<CustomField>
    <fullName>ConstructionDistinction__c</fullName>
    <formula>IF(TEXT(ConstructionClassification__c) = &quot;増設&quot;,
CASE(TEXT( Opportunity__r.EstablishedCompany__c ),
    &quot;三菱&quot;,&quot;当社既設&quot;,
    &quot;他社既設&quot;
),
CASE(TEXT(ConstructionClassification__c),
    &quot;新設&quot;,&quot;新設&quot;,
    &quot;更新（自社既設）&quot;,&quot;当社既設&quot;,
    &quot;更新（蓄電池）&quot;,&quot;当社既設&quot;,
    &quot;更新（他社既設）&quot;,&quot;他社既設&quot;,
    &quot;保守・点検・修繕等&quot;
))</formula>
    <label>②工事区分</label>
    <type>Text</type>
</CustomField>