force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ContractAmountMax__c.field-meta.xml
<CustomField>
    <fullName>ContractAmountMax__c</fullName>
    <label>受注(見込)CP【MAX】</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>