force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ContractAmountMin__c.field-meta.xml
<CustomField>
    <fullName>ContractAmountMin__c</fullName>
    <label>受注(見込)CP【MIN】</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>