force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CPCumulationRepresentative__c.field-meta.xml
<CustomField>
    <fullName>CPCumulationRepresentative__c</fullName>
    <label>CP積算部門及び担当</label>
    <type>TextArea</type>
</CustomField>