force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Creating__c.field-meta.xml
<CustomField>
    <fullName>Creating__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>入力完了後、チェックを外してWF開始ください。チェックを外して保存ボタンを押すと入力エラーが確認できます。</inlineHelpText>
    <label>伺い作成中</label>
    <type>Checkbox</type>
</CustomField>