force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CurrentApproverText__c.field-meta.xml
<CustomField>
    <fullName>CurrentApproverText__c</fullName>
    <label>現在の承認者</label>
    <length>30</length>
    <type>Text</type>
</CustomField>