force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CurrentDesignChangeCP__c.field-meta.xml
<CustomField>
    <fullName>CurrentDesignChangeCP__c</fullName>
    <formula>OurBidAmount__c +  DetailAfterDesignChangeCPSummary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回設計変更後_CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>