force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CurrentDesignChangeTC__c.field-meta.xml
<CustomField>
    <fullName>CurrentDesignChangeTC__c</fullName>
    <formula>AdjustTotalTCMaxSummary__c +  IF ( NOT( ISNULL( DetailAfterDesignTCSummary__c ) ) ,  DetailAfterDesignTCSummary__c ,  OriginalContractTCSummary__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回設計変更後_TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>