force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CurrentDesignChangeTCRate__c.field-meta.xml
<CustomField>
    <fullName>CurrentDesignChangeTCRate__c</fullName>
    <formula>CurrentDesignChangeTC__c /  CurrentDesignChangeCP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回設計変更後_TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>