force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CurrentDesignChangeWC__c.field-meta.xml
<CustomField>
    <fullName>CurrentDesignChangeWC__c</fullName>
    <formula>AdjustTotalWCSummary__c +  IF (  NOT( ISNULL( DetailAfterDesignChangeWCSummary__c ) ) ,  DetailAfterDesignChangeWCSummary__c ,  OriginalContractWCSummary__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回設計変更後_WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>