force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CurrentDesignChangeWCRate__c.field-meta.xml
<CustomField>
    <fullName>CurrentDesignChangeWCRate__c</fullName>
    <formula>CurrentDesignChangeWC__c /  CurrentDesignChangeCP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回設計変更後_WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>