force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CustomInquiryApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomInquiryApprovalStatus__c</fullName>
    <formula>CASE(
    ApprovallStepsName__c,
    &quot;&quot;, &quot;未申請&quot;,
    &quot;申請部門承認者1&quot;, &quot;申請部門&quot;,
    &quot;申請部門承認者2&quot;, &quot;申請部門&quot;,
    &quot;申請部門承認者3&quot;, &quot;申請部門&quot;,
    &quot;承認部門承認者1&quot;, &quot;承認部門&quot;,
    &quot;承認部門承認者2&quot;, &quot;承認部門&quot;,
    &quot;承認部門承認者3&quot;, &quot;承認部門&quot;,
    &quot;承認部門承認者4&quot;, &quot;承認部門&quot;,
    &quot;承認部門承認者5&quot;, &quot;承認部門&quot;,
    &quot;承認部門承認者6&quot;, &quot;承認部門&quot;,
    &quot;フリー設定最終承認者&quot;, &quot;伺承認済&quot;,
    &quot;&quot;
)</formula>
    <label>伺い認許ステータス(フリー設定)</label>
    <type>Text</type>
</CustomField>