force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>入札納期・工期</label>
    <type>Date</type>
</CustomField>