force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DeliveryPlace__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPlace__c</fullName>
    <formula>IF(
	Opportunity__c &lt;&gt; null,
	IF(
		ISPICKVAL(BU__c,  &apos;施設&apos;),
		Opportunity__r.Property__r.Name,
		IF(
			ISPICKVAL(BU__c,  &apos;水環境&apos;),
			Opportunity__r.PumpStation__r.Name,
			IF(
				ISPICKVAL(BU__c,  &apos;官需&apos;),
				Opportunity__r.SupplySite__r.Name,
				&apos;&apos;
			)
		)
	),
	&apos;&apos;
)</formula>
    <label>納入場所</label>
    <type>Text</type>
</CustomField>