force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DeliveryPlaceManualEntry__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPlaceManualEntry__c</fullName>
    <label>納入場所(手入力)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>