force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DepartmentProfitMargin__c.field-meta.xml
<CustomField>
    <fullName>DepartmentProfitMargin__c</fullName>
    <formula>0</formula>
    <inlineHelpText>前年度実績利益率または当年度目標利益率</inlineHelpText>
    <label>部門利益率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>