force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DependentEstimateInquiry__c.field-meta.xml
<CustomField>
    <fullName>DependentEstimateInquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>参照先見積伺い</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>QuoteBiddingInquiry__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>見積伺い</value>
        </filterItems>
        <filterItems>
            <field>QuoteBiddingInquiry__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>QuoteBiddingInquiry__c</referenceTo>
    <relationshipLabel>見積・応札・手数料伺い (参照先見積伺い)</relationshipLabel>
    <relationshipName>DependentEstimateInquiries</relationshipName>
    <type>Lookup</type>
</CustomField>