force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DependentInquiryMemo__c.field-meta.xml
<CustomField>
    <fullName>DependentInquiryMemo__c</fullName>
    <inlineHelpText>CRM移行前の伺いは、事管推採番番号があれば記入ください</inlineHelpText>
    <label>参照先伺い_備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>