force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DependentOnOriginalContractResultRepor__c.field-meta.xml
<CustomField>
    <fullName>DependentOnOriginalContractResultRepor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>原契約時参照先_応札伺い(結果報告)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>QuoteBiddingInquiry__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>応札伺い</value>
        </filterItems>
        <filterItems>
            <field>QuoteBiddingInquiry__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <filterItems>
            <field>QuoteBiddingInquiry__c.ResultContactStatus__c</field>
            <operation>equals</operation>
            <value>承認済</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>QuoteBiddingInquiry__c</referenceTo>
    <relationshipName>dependentOnOriginalContractResultRepors</relationshipName>
    <type>Lookup</type>
</CustomField>