force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DetailAfterDesignChangeCPSummary__c.field-meta.xml
<CustomField>
    <fullName>DetailAfterDesignChangeCPSummary__c</fullName>
    <label>設計変更後最新_CP</label>
    <summarizedField>DetailByInquiryFactory__c.NewContractCP__c</summarizedField>
    <summaryForeignKey>DetailByInquiryFactory__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>