force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DetailAfterDesignChangeWCSummary__c.field-meta.xml
<CustomField>
    <fullName>DetailAfterDesignChangeWCSummary__c</fullName>
    <label>設計変更後最新_WC</label>
    <summarizedField>DetailByInquiryFactory__c.NewContractWC__c</summarizedField>
    <summaryForeignKey>DetailByInquiryFactory__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>