force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DetailAfterDesignFee__c.field-meta.xml
<CustomField>
    <fullName>DetailAfterDesignFee__c</fullName>
    <label>最新_手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>