force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DetailAfterDesignGrossProfitFormula__c.field-meta.xml
<CustomField>
    <fullName>DetailAfterDesignGrossProfitFormula__c</fullName>
    <formula>DetailAfterDesignChangeCPSummary__c - DetailAfterDesignChangeWCSummary__c -  DetailAfterDesignFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>設計変更後最新_粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>