force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DetailAfterDesignProfitFormula__c.field-meta.xml
<CustomField>
    <fullName>DetailAfterDesignProfitFormula__c</fullName>
    <formula>DetailAfterDesignChangeCPSummary__c - DetailAfterDesignTCSummary__c -  DetailAfterDesignFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>設計変更後最新_利益</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>