force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DetailAfterDesignRate__c.field-meta.xml
<CustomField>
    <fullName>DetailAfterDesignRate__c</fullName>
    <formula>ROUND(DetailAfterDesignTCSummary__c/DetailAfterDesignChangeCPSummary__c,3)</formula>
    <label>設計変更後最新_TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>