force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DetailAfterDesignTCSummary__c.field-meta.xml
<CustomField>
    <fullName>DetailAfterDesignTCSummary__c</fullName>
    <label>設計変更後最新_TC</label>
    <summarizedField>DetailByInquiryFactory__c.NewContractTCFormula__c</summarizedField>
    <summaryForeignKey>DetailByInquiryFactory__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>