force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DetailAfterDesignWCRate__c.field-meta.xml
<CustomField>
    <fullName>DetailAfterDesignWCRate__c</fullName>
    <formula>ROUND(DetailAfterDesignChangeWCSummary__c/DetailAfterDesignChangeCPSummary__c,3)</formula>
    <label>設計変更後最新_WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>