force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DetailedStatementNecessity__c.field-meta.xml
<CustomField>
    <fullName>DetailedStatementNecessity__c</fullName>
    <label>内訳書要否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>