force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DeterminingFeeTotal_MAX__c.field-meta.xml
<CustomField>
    <fullName>DeterminingFeeTotal_MAX__c</fullName>
    <label>決定手数料合計(MAX)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>