force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DeterminingFeeTotal_MIN__c.field-meta.xml
<CustomField>
    <fullName>DeterminingFeeTotal_MIN__c</fullName>
    <label>決定手数料合計(MIN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>