force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DifferenceWithLastTimeMax__c.field-meta.xml
<CustomField>
    <fullName>DifferenceWithLastTimeMax__c</fullName>
    <formula>IF ( ISBLANK(DependentFeeInquiry__c) ,
   0,
   IF (Agency1MaxFee__c==null,0,Agency1MaxFee__c) - IF(DependentFeeInquiry__r.Agency1MaxFee__c==null,0,DependentFeeInquiry__r.Agency1MaxFee__c) + 
   IF (Agency2MaxFee__c==null,0,Agency2MaxFee__c) - IF(DependentFeeInquiry__r.Agency2MaxFee__c==null,0,DependentFeeInquiry__r.Agency2MaxFee__c)+ 
   IF (Agency3MaxFee__c==null,0,Agency3MaxFee__c) - IF(DependentFeeInquiry__r.Agency3MaxFee__c==null,0,DependentFeeInquiry__r.Agency3MaxFee__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>前回との差額(Max)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>