force-app/main/default/objects/QuoteBiddingInquiry__c/fields/DifferenceWithLastTimeMin__c.field-meta.xml
<CustomField>
    <fullName>DifferenceWithLastTimeMin__c</fullName>
    <formula>IF ( ISBLANK(DependentFeeInquiry__c) ,
   0,
   IF (Agency1MinFee__c==null,0,Agency1MinFee__c) - IF(DependentFeeInquiry__r.Agency1MinFee__c==null,0,DependentFeeInquiry__r.Agency1MinFee__c) + 
   IF (Agency2MinFee__c==null,0,Agency2MinFee__c) - IF(DependentFeeInquiry__r.Agency2MinFee__c==null,0,DependentFeeInquiry__r.Agency2MinFee__c)+ 
   IF (Agency3MinFee__c==null,0,Agency3MinFee__c) - IF(DependentFeeInquiry__r.Agency3MinFee__c==null,0,DependentFeeInquiry__r.Agency3MinFee__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>前回との差額(Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>