force-app/main/default/objects/QuoteBiddingInquiry__c/fields/EstimatedPriceErrorRate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPriceErrorRate__c</fullName>
    <formula>IF( 
   OR(
		ISNULL(PlannedPrice__c),
		PlannedPrice__c == 0, 
		ISNULL(PublicPrice__c),
		PublicPrice__c == 0
	),
	NULL,
	ABS(PlannedPrice__c / PublicPrice__c)
)</formula>
    <inlineHelpText>予定価格　推定価格／公表価格</inlineHelpText>
    <label>予定価格　推定差異</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>