force-app/main/default/objects/QuoteBiddingInquiry__c/fields/EstimatedSales__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSales__c</fullName>
    <label>売上予定年月</label>
    <type>Date</type>
</CustomField>