force-app/main/default/objects/QuoteBiddingInquiry__c/fields/EstimatedWinningBidAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedWinningBidAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>落札金額不明の為推定値</label>
    <type>Checkbox</type>
</CustomField>