force-app/main/default/objects/QuoteBiddingInquiry__c/fields/EstimationUsage__c.field-meta.xml
<CustomField>
    <fullName>EstimationUsage__c</fullName>
    <label>見積用途</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>提案用</fullName>
            </value>
            <value>
                <fullName>起案用</fullName>
            </value>
            <value>
                <fullName>予算要求用</fullName>
            </value>
            <value>
                <fullName>積算用</fullName>
            </value>
            <value>
                <fullName>入札前価格提示用</fullName>
            </value>
            <value>
                <fullName>価格交渉用</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>