force-app/main/default/objects/QuoteBiddingInquiry__c/fields/EstimationUsageMemo__c.field-meta.xml
<CustomField>
    <fullName>EstimationUsageMemo__c</fullName>
    <label>見積用途_備考</label>
    <length>80</length>
    <type>Text</type>
</CustomField>