force-app/main/default/objects/QuoteBiddingInquiry__c/fields/EvaluationComment3__c.field-meta.xml
<CustomField>
    <fullName>EvaluationComment3__c</fullName>
    <inlineHelpText>特別手数料の場合必須</inlineHelpText>
    <label>代理店3_申請理由・評価コメント</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>