force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExistingCompanyName2__c.field-meta.xml
<CustomField>
    <fullName>ExistingCompanyName2__c</fullName>
    <label>既設社2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ki1</valueSetName>
    </valueSet>
</CustomField>