force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExistingCompanyName3__c.field-meta.xml
<CustomField>
    <fullName>ExistingCompanyName3__c</fullName>
    <label>既設社3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ki1</valueSetName>
    </valueSet>
</CustomField>