force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExistingEquipment2__c.field-meta.xml
<CustomField>
    <fullName>ExistingEquipment2__c</fullName>
    <label>既設社2の納入設備</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ki2</valueSetName>
    </valueSet>
</CustomField>