force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExistingEquipment3__c.field-meta.xml
<CustomField>
    <fullName>ExistingEquipment3__c</fullName>
    <label>既設社3の納入設備</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ki2</valueSetName>
    </valueSet>
</CustomField>