force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExistingInfoMemo__c.field-meta.xml
<CustomField>
    <fullName>ExistingInfoMemo__c</fullName>
    <label>既設情報_備考</label>
    <length>80</length>
    <type>Text</type>
</CustomField>