force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExpectedOrderDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedOrderDate__c</fullName>
    <inlineHelpText>設計変更応札伺いの際は、設計変更分の受注予定年月を記載</inlineHelpText>
    <label>受注予定年月</label>
    <type>Date</type>
</CustomField>