force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExpectedOrderSingleCount__c.field-meta.xml
<CustomField>
    <fullName>ExpectedOrderSingleCount__c</fullName>
    <label>受注見込_単計(損予)時点</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>登録なし</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 決定</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 有望</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 努力</label>
            </value>
            <value>
                <fullName>4C</fullName>
                <label>4C チャレンジ</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 希望</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 需要</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>