force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExpectProfitAndLossOnOrderFee__c.field-meta.xml
<CustomField>
    <fullName>ExpectProfitAndLossOnOrderFee__c</fullName>
    <label>受注時見込_手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>