force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExpectProfitAndLossOnOrderTC__c.field-meta.xml
<CustomField>
    <fullName>ExpectProfitAndLossOnOrderTC__c</fullName>
    <inlineHelpText>デフォルトは案件の場所別合計。必要に応じて最新数値に修正ください。修正保存すると伺い数値明細の表が更新されます</inlineHelpText>
    <label>受注時見込_TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>