force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExpectProfitAndLossOnOrderTCRate__c.field-meta.xml
<CustomField>
    <fullName>ExpectProfitAndLossOnOrderTCRate__c</fullName>
    <formula>ROUND(ExpectProfitAndLossOnOrderTC__c/ExpectProfitAndLossOnOrderCP__c,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注時見込_TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>