force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExpectProfitAndLossOnOrderWCRate__c.field-meta.xml
<CustomField>
    <fullName>ExpectProfitAndLossOnOrderWCRate__c</fullName>
    <formula>ROUND(ExpectProfitAndLossOnOrderWC__c/ExpectProfitAndLossOnOrderCP__c,3)</formula>
    <label>受注時見込_WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>