force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExportManagementProvisionQ10__c.field-meta.xml
<CustomField>
    <fullName>ExportManagementProvisionQ10__c</fullName>
    <defaultValue>&quot;いいえ&quot;</defaultValue>
    <label>E.貿管Bが特に取引を認めた社内包括承認取引である</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
                <default>true</default>
                <label>いいえ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>