force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExportManagementProvisionQ11__c.field-meta.xml
<CustomField>
    <fullName>ExportManagementProvisionQ11__c</fullName>
    <defaultValue>&quot;―&quot;</defaultValue>
    <label>(Eが「はい」の場合)貿管B承認済整理番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>