force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ExportManagementProvisionQ12__c.field-meta.xml
<CustomField>
    <fullName>ExportManagementProvisionQ12__c</fullName>
    <label>(A～Dいずれか「はい」かつEが「いいえ」の場合)様式A1および様式C3受審結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>諾</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
            <value>
                <fullName>様式A1・C3対象外</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
                <isActive>false</isActive>
                <label>いいえ</label>
            </value>
            <value>
                <fullName>はい</fullName>
                <isActive>false</isActive>
                <label>はい</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>