force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Factor_PriceExponential__c.field-meta.xml
<CustomField>
    <fullName>Factor_PriceExponential__c</fullName>
    <label>損益区分（MAX）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TC以上</fullName>
            </value>
            <value>
                <fullName>WC以上TC未満</fullName>
            </value>
            <value>
                <fullName>WC未満</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>