force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Factor_PriceExponential_CalculateMin__c.field-meta.xml
<CustomField>
    <fullName>Factor_PriceExponential_CalculateMin__c</fullName>
    <formula>IF(
    ISPICKVAL(Factor_PriceExponentialMin__c,&quot;TC以上&quot;),1.0,
    IF(
        ISPICKVAL(Factor_PriceExponentialMin__c, &quot;WC以上TC未満&quot;),
        IF(
            ISBLANK(TEXT(Factor_PriceExponential_Manual2Min__c)),0.8,VALUE(TEXT(Factor_PriceExponential_Manual2Min__c))
        ),
        IF(
            ISPICKVAL(Factor_PriceExponentialMin__c, &quot;WC未満&quot;),
            IF(
                ISBLANK(TEXT(Factor_PriceExponential_ManualMin__c )),0.6,VALUE(TEXT(Factor_PriceExponential_ManualMin__c ))
            ),0
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>損益区分（係数）（MIN）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>