force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Factor_PriceExponential_Manual2__c.field-meta.xml
<CustomField>
    <fullName>Factor_PriceExponential_Manual2__c</fullName>
    <defaultValue>&quot;0.8&quot;</defaultValue>
    <inlineHelpText>不採算が当社に起因する場合、必要に応じてデフォルト値以外の係数を選択可</inlineHelpText>
    <label>損益区分（WC以上TC未満）（MAX）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.8</fullName>
                <default>true</default>
                <label>0.8</label>
            </value>
            <value>
                <fullName>0.85</fullName>
            </value>
            <value>
                <fullName>0.9</fullName>
            </value>
            <value>
                <fullName>0.95</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>